--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -12,7 +12,7 @@
     <color name="start_button_bg">#FFaeb0b0</color>
     <color name="cardlist_bg">#FF000000</color>
     <color name="qmslist_bg">#FF000000</color>
-    <color name="bubble_my_bg">#356a6a</color>
+    <color name="bubble_my_bg">#464646</color>
     <color name="bubble_oppo_bg">#FF2f2f2f</color>
     <color name="edit_nofocus_bg">#FF303030</color>
     <color name="edit_bg">#003f3f</color>
@@ -27,7 +27,7 @@
     <color name="comments_count_bg">#003f3f</color>
 
     <color name="hidden">#FF3f0000</color>
-    <color name="deleted">#40000000</color>
+    <color name="deleted">#ff565656</color>
     <color name="global_important">#40FF0000</color>
     <color name="global_normal">#356a6a</color>
     <color name="search_post_title">#356a6a</color>
@@ -86,6 +86,7 @@
     <color name="bb_cur_border">#FF004f1f</color>
     <color name="bb_cur_indent">#FF004f1f</color>
 
+	<color name="bb_offtop">#FF888888</color>
     <color name="bb_table_border">#FFC0C0C0</color>
 
     <!--bb text color map-->
