--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -43,6 +43,11 @@
     <color name="unread_text">@color/main_text</color>
     <color name="moderator_text">#FFFF0000</color>
 
+    <color name="skin_keyword_off_bg">#FF404040</color>
+    <color name="skin_keyword_on_bg">#356a6a</color>
+
+    <color name="scroll_horz_thumb_color">#FFB2B2B2</color>
+
     <color name="bb_font">#FFb0b0b0</color>
     <color name="bb_link">#356a6a</color>
     <color name="bb_node_background">#0000</color>
@@ -73,6 +78,11 @@
     <color name="bb_code_border">#FF4f0b00</color>
     <color name="bb_code_indent">#FF4f0b00</color>
     <color name="bb_code_indent_close">#FF4f0b00</color>
+
+    <color name="bb_hide_head">#0000</color>
+    <color name="bb_hide_body">#0000</color>
+    <color name="bb_hide_border">#FF808080</color>
+    <color name="bb_hide_indent">#FF808080</color>
 
     <color name="bb_ex_body">#0000</color>
     <color name="bb_ex_border">#FF9f3b3b</color>
