--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -54,6 +54,9 @@
     <color name="ticket_new">#FFE00000</color>
     <color name="ticket_work">#FFE0E000</color>
     <color name="ticket_done">#FFE0E0E0</color>
+    <color name="ticket_new_text">#FF000000</color>
+    <color name="ticket_work_text">#FF000000</color>
+    <color name="ticket_done_text">#FF000000</color>
 
     <color name="bb_font">#FFb0b0b0</color>
     <color name="bb_link">#356a6a</color>
