--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,6 +5,7 @@
     <color name="main_text">#FFb0b0b0</color>
     <color name="image_gallary_bg">#Ff1f201f</color>
     <color name="status_bar">#001a19</color>
+    <color name="navigation_bar">#001a19</color>
     <color name="brend">#003f3f</color>
     <color name="brend_alpha">#002b2b</color>
     <color name="label_text">#FF909090</color>
