--- a/app/src/main/res/drawable/button_bg_border.xml
+++ b/app/src/main/res/drawable/button_bg_border.xml
@@ -11,12 +11,12 @@
           <solid android:color="@android:color/transparent" />
           <stroke
               android:width="1dip"
-              android:color="@color/border_line_csl" />
+              android:color="@color/border_line" />
         </shape>
       </item>
       <item>
       <shape>
-        <solid android:color="@color/pressed_csl"/>
+        <solid android:color="@color/pressed"/>
       </shape>
       </item>
     </layer-list>
@@ -32,7 +32,7 @@
           <solid android:color="@android:color/transparent" />
           <stroke
               android:width="1dip"
-              android:color="@color/border_line_csl" />
+              android:color="@color/border_line" />
         </shape>
       </item>
       <!--item>
