--- a/app/src/main/res/drawable/button_bg.xml
+++ b/app/src/main/res/drawable/button_bg.xml
@@ -2,7 +2,7 @@
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
   <item android:state_pressed="true">
     <shape>
-      <solid android:color="@color/pressed_csl"/>
+      <solid android:color="@color/pressed"/>
     </shape>
   </item>
   <item android:state_pressed="false">
