--- a/app/src/main/res/drawable/button_box_minus.xml
+++ b/app/src/main/res/drawable/button_box_minus.xml
@@ -21,7 +21,7 @@
     <layer-list>
       <item>
         <shape android:shape="rectangle" >
-          <solid android:color="@color/pressed_csl" />
+          <solid android:color="@color/pressed" />
         </shape>
       </item>
       <item>
