--- a/app/src/main/res/drawable/button_flat.xml
+++ b/app/src/main/res/drawable/button_flat.xml
@@ -8,13 +8,13 @@
     <item android:state_pressed="false">
       <shape android:dither="true" android:shape="rectangle">
         <corners android:radius="3dp" />
-        <solid android:color="@color/button_flat_bg_csl" />
+        <solid android:color="@color/button_flat_bg" />
       </shape>
     </item>
     <item android:state_pressed="true">
       <shape android:dither="true" android:shape="rectangle">
         <corners android:radius="3dp" />
-        <solid android:color="@color/pressed_csl" />
+        <solid android:color="@color/pressed" />
       </shape>
     </item>
   </selector>
