--- a/app/src/main/res/drawable/button_start.xml
+++ b/app/src/main/res/drawable/button_start.xml
@@ -4,7 +4,7 @@
     <layer-list>
       <item>
         <shape android:shape="rectangle">
-          <solid android:color="@color/brend_csl" />
+          <solid android:color="@color/brend" />
         </shape>
       </item>
       <item
@@ -14,7 +14,7 @@
         android:bottom="8dp">
         <shape android:dither="true" android:shape="rectangle">
           <corners android:radius="3dp" />
-          <solid android:color="@color/start_button_bg_csl" />
+          <solid android:color="@color/start_button_bg" />
         </shape>
       </item>
     </layer-list>
@@ -23,7 +23,7 @@
     <layer-list>
       <item>
         <shape android:shape="rectangle">
-          <solid android:color="@color/brend_csl" />
+          <solid android:color="@color/brend" />
         </shape>
       </item>
       <item
@@ -33,7 +33,7 @@
         android:bottom="8dp">
         <shape android:dither="true" android:shape="rectangle">
           <corners android:radius="3dp" />
-          <solid android:color="@color/pressed_csl" />
+          <solid android:color="@color/pressed" />
         </shape>
       </item>
     </layer-list>
