--- a/app/src/main/res/drawable/button_thumb_down.xml
+++ b/app/src/main/res/drawable/button_thumb_down.xml
@@ -13,7 +13,7 @@
     <layer-list>
       <item>
         <shape android:shape="rectangle" >
-          <solid android:color="@color/pressed_csl" />
+          <solid android:color="@color/pressed" />
         </shape>
       </item>
       <item>
