--- a/app/src/main/res/drawable/card_sep.xml
+++ b/app/src/main/res/drawable/card_sep.xml
@@ -2,7 +2,7 @@
 <layer-list xmlns:android="http://schemas.android.com/apk/res/android" >
   <item>
     <shape>
-      <solid android:color="@color/cardlist_bg_csl" />
+      <solid android:color="@color/cardlist_bg" />
     </shape>
   </item>
   <item>
