--- a/app/src/main/res/drawable/nav_expander.xml
+++ b/app/src/main/res/drawable/nav_expander.xml
@@ -22,7 +22,7 @@
     <layer-list>
       <item>
         <shape android:shape="rectangle" >
-          <solid android:color="@color/pressed_csl" />
+          <solid android:color="@color/pressed" />
         </shape>
       </item>
       <item>
@@ -35,7 +35,7 @@
     <layer-list>
       <item>
         <shape android:shape="rectangle" >
-          <solid android:color="@color/pressed_csl" />
+          <solid android:color="@color/pressed" />
         </shape>
       </item>
       <item>
