--- a/app/src/main/res/drawable/nav_item.xml
+++ b/app/src/main/res/drawable/nav_item.xml
@@ -5,7 +5,7 @@
     <layer-list>
       <item>
         <shape>
-          <solid android:color="@color/selected_bg_csl" />
+          <solid android:color="@color/selected_bg" />
         </shape>
       </item>
     </layer-list>
@@ -15,7 +15,7 @@
     <layer-list>
       <item>
         <shape>
-          <solid android:color="@color/pressed_csl" />
+          <solid android:color="@color/pressed" />
         </shape>
       </item>
     </layer-list>
