--- a/app/src/main/res/drawable/qms_attach.xml
+++ b/app/src/main/res/drawable/qms_attach.xml
@@ -5,7 +5,7 @@
         <layer-list>
             <item>
                 <shape android:shape="rectangle">
-                    <solid android:color="@color/pressed_csl" />
+                    <solid android:color="@color/pressed" />
                 </shape>
             </item>
             <item>
