Поправлен синий цвет для лучшей читаемости на форуме

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -120,7 +120,7 @@
     <color name="bisque">#FFFFE4C4</color>
     <color name="black">#FF909090</color><!--FF000000-->
     <color name="blanchedalmond">#FFFFEBCD</color>
-    <color name="blue">#FF0000FF</color>
+    <color name="blue">#005EFF</color>
     <color name="blueviolet">#FF8A2BE2</color>
     <color name="brown">#FFA52A2A</color>
     <color name="burlywood">#FFDEB887</color>
