--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -130,7 +130,7 @@
     <color name="cornsilk">#FFFFF8DC</color>
     <color name="crimson">#FFDC143C</color>
     <color name="cyan">#FF00FFFF</color>
-    <color name="darkblue">#FF00008B</color>
+    <color name="darkblue">#005EFF</color>
     <color name="darkcyan">#FF008B8B</color>
     <color name="darkgoldenrod">#FFB8860B</color>
     <color name="darkgray">#FFA9A9A9</color>
